--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
     "tsc-watch": "^4.2.9",
-    "typescript": "^4.2.2"
+    "typescript": "^4.3.2"
+  },
+  "dependencies": {
+    "babel": "^6.23.0"
   }
 }
