--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc-watch --onsuccess \"node dist/index.js\"",
+    "start": "tsc && node dist/index.js",
+    "startWhatching": "tsc-watch --onsuccess \"node dist/index.js\"",
     "test": "jest"
   },
   "keywords": [],
@@ -14,6 +15,7 @@
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
     "tsc-watch": "^4.2.9",
-    "typescript": "^4.2.2"
-  }
+    "typescript": "^4.3.2"
+  },
+  "dependencies": {}
 }
